# parking-service

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  pyrightconfig.json
apps/customers/: admin.py  apps.py
apps/customers/api/: __init__.py  customer_api.py
apps/customers/migrations/: 0001_initial.py
apps/customers/models/: Customer.py  __init__.py
apps/customers/schemas/: ClientSchemas.py  __init__.py
apps/parking/: admin.py  apps.py
apps/parking/api/: __init__.py  records_api.py  spots_api.py
apps/parking/migrations/: 0001_initial.py
apps/parking/models/: ParkingRecord.py  ParkingSpot.py  __init__.py
apps/parking/schemas/: RecordSchemas.py  SpotSchemas.py  __init__.py
apps/parking/signals/: __init__.py  update_parking_spot_status.py
apps/vehicles/: admin.py  apps.py  tasks.py
apps/vehicles/api/: __init__.py  vehicle_api.py  vehicle_brand_api.py  vehicle_color_api.py  vehicle_model_api.py  vehicle_types_api.py
apps/vehicles/migrations/: 0001_initial.py  0002_vehiclebrand_vehiclecolor_vehiclemodel_and_more.py
apps/vehicles/models/: Vehicle.py  VehicleBrand.py  VehicleColor.py  VehicleModel.py  (+2 more)
core/: api.py  celery.py  urls.py
core/settings/: production.py  settings.py  test.py
utils/decorators/: __init__.py  has_permissions.py
utils/schemas/: GenericMensageSchema.py  __init__.py
utils/services/: __init__.py  permission_service.py  update_service.py
utils/tests/: __init__.py  generic_message_schema_test.py  has_permissions_decorator_test.py  permission_service_test.py  update_service_tests.py
(+10 files in other folders)
